Add jvm test method.